[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 36
font_data = ExtResource( 2 )

[sub_resource type="InputEventAction" id=3]
action = "ui_select"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -120.0
margin_right = 240.0
margin_bottom = 120.0
custom_fonts/font = SubResource( 1 )
text = "Dodge the
 Creeps!
"
align = 1

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "0

"
align = 1

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -75.5
margin_top = -200.0
margin_right = 75.5
margin_bottom = -100.0
custom_fonts/font = SubResource( 2 )
shortcut = SubResource( 4 )
text = "START"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
